Update Bobal Stav website and admin features
